# Open-Desk-Dash

./: .gitignore  Dev_plugin_guide.md  Makefile  README.md  opendeskdash.service  pyproject.toml  requirements.txt
app/: config.py  service.py
app/configs/: config.py  init_db.sql
app/lib/: db_control.py  plugin_control.py  plugin_loader.py
app/plugins/dashboard/: plugin.toml
app/plugins/default_dashboard/: dashboard.py  registry.toml
app/plugins/default_weather/: registry.toml  weather.py
app/src/templates/: config.html  config_base.html  plugins.html  sidebar.html
desktop_service/: Makefile  opendeskdash.service  opendeskdashapi.service  requirements.txt
desktop_service/app/: service.py
desktop_service/app/config/: config.py
desktop_service/app/lib/: plugin_loader.py
desktop_service/service/: plugin_loader.py  service.py
desktop_service/service/lib/: system.py  utils.py
open_desk_dash/: config.py  service.py
open_desk_dash/configs/: __init__.py  config.py  init_db.sql
open_desk_dash/lib/: config.py  db_control.py  db_controls.py  exceptions.py  misc.py  oddash.py  plugin_control.py  plugin_utils.py  update_control.py
open_desk_dash/plugins/default_dashboard/: default_dashboard.py  registry.toml
open_desk_dash/plugins/default_weather/: default_weather.py  registry.toml
open_desk_dash/plugins/external_dash/: external_dash.py  registry.toml
open_desk_dash/plugins/rss_dash/: registry.toml  rss_dash.py
open_desk_dash/src/templates/: base.html  config.html  plugins.html  (+3 more)
pi_app/: Makefile  opendeskdash.service
pi_app/app/: service.py
(+41 files in other folders)
